# jdkman

./: Cargo.toml
src/: adoptiumapi.rs  args.rs  commands.rs  config.rs  env.rs  logger.rs  main.rs  platform.rs
src/adoptiumapi/: gh.rs
