[package]
name = "jdkman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
indicatif = { version = "0.17.1", features = ["tokio"] }
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json"] }
schemafy = "0.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.5.9"
