[package]
name = "jdkman"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["platforms/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
cfg-if = "1.0.0"
clap = { version = "3.2.22", features = ["derive"] }
dirs = "4.0.0"
indicatif = { version = "0.17.1", features = ["tokio"] }
lazy_static = "1.4.0"
parking_lot = "0.12.1"
regex = "1.6.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"
tokio = { version = "1.21.1", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.15"

[target.'cfg(windows)'.dependencies]
platform_win = { version = "0.1", path = "platforms/windows" }

[target.'cfg(not(windows))'.dependencies]
platform_nix = { version = "0.1", path = "platforms/nix" }
